--- a/.github/policies/resourceManagement.yml
+++ b/.github/policies/resourceManagement.yml
@@ -2771,7 +2771,7 @@ configuration:
       - addLabel:
           label: AKS
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Auto-Assign
       description: '[AKS] auto assign labels and users based on issue description.'
@@ -2812,7 +2812,7 @@ configuration:
       - addLabel:
           label: Web Apps
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Auto-Assign
       description: '[webapp] auto assign labels and users based on issue description.'
@@ -2850,7 +2850,7 @@ configuration:
       - addLabel:
           label: Service Connector
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Auto-Assign
       - assignTo:
@@ -2874,7 +2874,7 @@ configuration:
       - addLabel:
           label: IoT
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Auto-Assign
       - addLabel:
@@ -2896,7 +2896,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Spring-Cloud
       description: '[spring-cloud] auto assign labels and users based on issue description.'
@@ -3046,7 +3046,7 @@ configuration:
       - addLabel:
           label: ARM
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[arm-cxp] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -3064,7 +3064,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: SQL
       description: '[sql] auto assign labels and users based on issue description.'
@@ -3084,7 +3084,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Container Registry
       description: '[acr] auto assign labels and users based on issue description.'
@@ -3131,7 +3131,7 @@ configuration:
       - addLabel:
           label: Container Instances
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[container] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -3188,7 +3188,7 @@ configuration:
       - addLabel:
           label: Functions
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[functionapp] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -3230,7 +3230,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: API Management
       description: '[apim] auto assign labels and users based on issue description.'
@@ -3250,7 +3250,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: DevOps
       description: '[devops] auto assign labels and users based on issue description.'
@@ -3347,7 +3347,7 @@ configuration:
       - addLabel:
           label: Service Bus
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[servicebus] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -3365,7 +3365,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Machine Learning
       description: '[machine learning] auto assign labels and users based on issue description.'
@@ -3385,7 +3385,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Devtestlab
       description: '[devtestlab] auto assign labels and users based on issue description.'
@@ -3430,7 +3430,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - jiasli
@@ -3451,7 +3451,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: NetAppFiles
       description: '[netappfiles] auto assign labels and users based on issue description.'
@@ -3471,7 +3471,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Cosmos
       description: '[cosmosdb] auto assign labels and users based on issue description.'
@@ -3665,7 +3665,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Event Grid
       description: '[eventgrid] auto assign labels and users based on issue description. '
@@ -3713,7 +3713,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Automation
       description: '[automation] auto assign labels and users based on issue description. '
@@ -3954,7 +3954,7 @@ configuration:
       - addLabel:
           label: Network - CDN
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[cdn] auto assign labels and users based on issue description. '
     - if:
       - payloadType: Pull_Request
@@ -3998,7 +3998,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Redis Cache
       description: '[redis] auto assign labels and users based on issue description.'
@@ -4048,7 +4048,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Service Fabric
       description: '[Service Fabric] auto assign labels and users based on issue description.'
@@ -4096,7 +4096,7 @@ configuration:
       - addLabel:
           label: VM SSH
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: SSH
       description: '[ssh] auto assign labels and users based on issue description. '
@@ -4116,7 +4116,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: PostgreSQL
       description: '[postgres] auto assign labels and users based on issue description.'
@@ -4136,7 +4136,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Synapse
       description: '[synapse] auto assign labels and users based on issue description.'
@@ -4342,7 +4342,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Pipelines
       - addLabel:
@@ -4500,7 +4500,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - addLabel:
           label: Network - Bastion
       description: '[network bastion] auto assign labels and users based on issue description.'
@@ -4597,7 +4597,7 @@ configuration:
       - addLabel:
           label: Recovery Services Backup
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[Backup] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -4645,7 +4645,7 @@ configuration:
       - addLabel:
           label: ContainerApp
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[container app] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -4721,7 +4721,7 @@ configuration:
       - addLabel:
           label: Batch
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[batch] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -4797,7 +4797,7 @@ configuration:
       - addLabel:
           label: SQL - VM
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[SqlVirtualMachine] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -4843,7 +4843,7 @@ configuration:
       - addLabel:
           label: Network - Front Door
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[Azure Front Door] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -4929,7 +4929,7 @@ configuration:
       - addLabel:
           label: Media Services
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[ams] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -4977,7 +4977,7 @@ configuration:
       - addLabel:
           label: Event Hubs
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[eventhub] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -4997,7 +4997,7 @@ configuration:
       - addLabel:
           label: Cognitive Services
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[Cognitive Services] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -5050,7 +5050,7 @@ configuration:
       - addLabel:
           label: App Configuration
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[appconfig] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -5096,7 +5096,7 @@ configuration:
       - addLabel:
           label: MySQL
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[mysql] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -5116,7 +5116,7 @@ configuration:
       - addLabel:
           label: Logic App
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[logic app] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -5233,7 +5233,7 @@ configuration:
       - addLabel:
           label: arcdata
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[acrdata] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -5277,7 +5277,7 @@ configuration:
       - addLabel:
           label: Recovery Services Backup
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[backup restore] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -5297,7 +5297,7 @@ configuration:
       - addLabel:
           label: Bot Services
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[botservice] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -5317,7 +5317,7 @@ configuration:
       - addLabel:
           label: Advisor
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[Advisor] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -5336,7 +5336,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - madsd
@@ -5358,7 +5358,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - Hamster-Huey
@@ -5380,7 +5380,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - gsethdev
@@ -5402,7 +5402,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - yutanglin16
@@ -5424,7 +5424,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - btardif
@@ -5446,7 +5446,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - seligj95
@@ -5468,7 +5468,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - apwestgarth
@@ -5490,7 +5490,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - yutanglin16
@@ -5512,7 +5512,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - madsd
@@ -5534,7 +5534,7 @@ configuration:
       - addLabel:
           label: Auto-Assign
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       - assignTo:
           users:
           - madsd
@@ -5557,7 +5557,7 @@ configuration:
       - addLabel:
           label: Artifacts
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[Artifacts] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -5577,7 +5577,7 @@ configuration:
       - addLabel:
           label: Kubernetes Configuration
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[Kubernetes Configuration] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
@@ -5621,7 +5621,7 @@ configuration:
       - addLabel:
           label: Reservations
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[Reservations] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -5641,7 +5641,7 @@ configuration:
       - addLabel:
           label: ARM
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[ARM-stack] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Issues
@@ -5661,7 +5661,7 @@ configuration:
       - addLabel:
           label: ARO
       - addLabel:
-          label: CXP Attention
+          label: Service Attention
       description: '[ARO] auto assign labels and users based on issue description.'
     - if:
       - payloadType: Pull_Request
