--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
     "customizations": {
       "vscode": {
         "settings": {
+          "python.terminal.activateEnvInCurrentTerminal": true,
           "python.defaultInterpreterPath": "/home/vscode/env/bin/python"
         },
         "extensions": [
