--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -52,6 +52,41 @@
                 "WaitOnNormalExit",
                 "RedirectOutput"
             ]
+        },
+        {
+            "name": "Codespace Azure CLI Debug",
+            "type": "python",
+            "request": "launch",
+            "python": "/home/vscode/env/bin/python",
+            "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
+            "cwd": "${workspaceRoot}",
+            "args": [
+                "--help"
+            ],
+            "console": "integratedTerminal",
+            "debugOptions": [
+                "WaitOnAbnormalExit",
+                "WaitOnNormalExit",
+                "RedirectOutput"
+            ],
+            "justMyCode": false
+        },
+        {
+            "name": "Codespace Azdev Debug",
+            "type": "python",
+            "request": "launch",
+            "python": "/home/vscode/env/bin/python",
+            "program": "/home/vscode/env/lib/python3.11/site-packages/azdev/__main__.py",
+            "cwd": "${workspaceRoot}",
+            "args": [
+                "--help"
+            ],
+            "console": "integratedTerminal",
+            "debugOptions": [
+                "WaitOnAbnormalExit",
+                "WaitOnNormalExit",
+                "RedirectOutput"
+            ]
         }
     ]
 }
