move to postCreate instead of postStart

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,6 @@
         "extensions": ["ms-python.python", "eamodio.gitlens"]
       }
     },
-    "postStartCommand": "/workspaces/azure-cli/.devcontainer/init.sh",
+    "postCreateCommand": "/workspaces/azure-cli/.devcontainer/init.sh",
     "name": "AzCLI devcontainer"
   }
