--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,6 @@
       }
     },
     "postCreateCommand": "/workspaces/azure-cli/.devcontainer/init.sh",
+    "postAttachCommand": "/workspaces/azure-cli/.devcontainer/notes.sh",
     "name": "AzCLI devcontainer"
   }
