--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,6 +5,11 @@
         "extensions": ["ms-python.python", "eamodio.gitlens"]
       }
     },
+    "hostRequirements": {
+      "cpus": 4,
+      "memory": "16gb",
+      "storage": "32gb"
+    },
     "postCreateCommand": "/workspaces/azure-cli/.devcontainer/init.sh",
     "postAttachCommand": "/workspaces/azure-cli/.devcontainer/notes.sh",
     "name": "AzCLI devcontainer"
