--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
           "ms-azuretools.vscode-docker",
           "ms-python.python",
           "ms-python.pylint",
-          "ms-python.flake8"
+          "ms-python.flake8",
+          "eamodio.gitlens"
         ]
       }
     },
