--- a/.dockerignore
+++ b/.dockerignore
@@ -10,7 +10,7 @@
 !az.completion
 # Make an exception for the license file
 !LICENSE.txt
-# Make an exception for docker temp files when build images
+# Make an exception for Azure CLI RPMs
 !docker-temp/*
 # Exclude build droppings, as mentioned in .gitignore
 src/build*
